<resources>
    <string name="app_name">NA Finance</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_signing_out">Signing out…</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation_sign_out">Are you sure want to sign out?</string>
    <string name="confirmation_export_expense">Are you sure want to export Expense?</string>
    <string name="confirmation_export_income">Are you sure want to export Income?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="contain_at_gmail">\@gmail</string>
    <string name="title_activity_home">Home</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="note">Note (max 100 characters)</string>
    <string name="clear">clear</string>
    <string name="clear_short">C</string>
    <string name="calendar_date_picker_result_values">%1$d-%2$02d-%3$02d</string>
    <string name="setting_title">Setting</string>
    <string name="action_bar_done">Done</string>
    <string name="profile_title">Profile</string>
    <string name="category_title">Category</string>
    <string name="add_expense_title">Add Expense</string>
    <string name="EXTRA_AMOUNT">com.example.denip.nasyiatulaisyiyahfinance.EXTRA_AMOUNT</string>
    <string name="select_category">Select Category</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="edit">Edit</string>
    <string name="save">save</string>
    <string name="add_income_title">Add Income</string>
    <string name="jakarta">Jakarta</string>
    <string name="yogyakarta">Yogyakarta</string>
    <string name="calendar_result">Calendar result</string>
    <string name="phone_number">Phone Number</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="expense_category">Expense Category</string>
    <string name="income_category">Income Category</string>
    <string name="prompt_enter_email">Enter email address!</string>
    <string name="prompt_enter_password">Enter password!</string>
    <string name="auth_failed">Email or Password is incorrect</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_failed">Reset Password Failed</string>
    <string name="reset_password_failed_message">Email not registered.</string>
    <string name="reset_password_success">Reset Password Success</string>
    <string name="reset_password_success_message">A request to reset your password has been
        sent. Please check your email.</string>
    <string name="ok">OK</string>
    <string name="login_failed_title">Login Failed</string>
    <string name="prompt_amount_empty">Amount cannot be empty</string>
    <string name="prompt_note_empty">Note cannot be empty</string>
    <string name="prompt_category_empty">Category cannot be empty</string>
    <string name="prompt_profile_name_empty">Name cannot be empty</string>
    <string name="prompt_profile_phone_number_empty">Phone number cannot be empty</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">Category Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_expense_category">Add Expense Category</string>
    <string name="amount">Amount</string>
    <string name="EXPENSE_NOTE">com.example.denip.nasyiatulaisyiyahfinance.expensenote</string>
    <string name="EXPENSE_ID">com.example.denip.nasyiatulaisyiyahfinance.expenseid</string>
    <string name="EXPENSE_CATEGORY">com.example.denip.nasyiatulaisyiyahfinance.expensecategory</string>
    <string name="EXPENSE_AMOUNT">com.example.denip.nasyiatulaisyiyahfinance.expenseamount</string>
    <string name="EXPENSE_ADDED_BY_TREASURER_INITIAL">com.example.denip.nasyiatulaisyiyahfinance.expenseaddedbytreasurerinitial</string>
    <string name="EXPENSE_ADDED_BY_TREASURER_UID">com.example.denip.nasyiatulaisyiyahfinance.expenseaddedbytreasureruid</string>
    <string name="EXPENSE_DATE">com.example.denip.nasyiatulaisyiyahfinance.expensedate</string>
    <string name="EXPENSE_ADDED_BY_TREASURER">com.example.denip.nasyiatulaisyiyahfinance.expenseaddedbytreasure</string>
    <string name="INCOME_NOTE">com.example.denip.nasyiatulaisyiyahfinance.incomenote</string>
    <string name="INCOME_ID">com.example.denip.nasyiatulaisyiyahfinance.incomeid</string>
    <string name="INCOME_CATEGORY">com.example.denip.nasyiatulaisyiyahfinance.incomecategory</string>
    <string name="INCOME_AMOUNT">com.example.denip.nasyiatulaisyiyahfinance.incomeamount</string>
    <string name="INCOME_NOTE_PHOTO_URI">com.example.denip.nasyiatulaisyiyahfinance.incomenotephotouri</string>
    <string name="INCOME_DATE">com.example.denip.nasyiatulaisyiyahfinance.incomedate</string>
    <string name="INCOME_ADDED_BY_TREASURER">com.example.denip.nasyiatulaisyiyahfinance.incomeaddedbytreasure</string>
    <string name="INCOME_ADDED_BY_TREASURER_UID">com.example.denip.nasyiatulaisyiyahfinance.incomeaddedbytreasureruid</string>
    <string name="INCOME_ADDED_BY_TREASURER_INITIAL">com.example.denip.nasyiatulaisyiyahfinance.incomeaddedbytreasurerinitial</string>
    <string name="CATEGORY_ID_EXPENSE">com.example.denip.nasyiatulaisyiyahfinance.expensecategoryid</string>
    <string name="CATEGORY_NUMBER_EXPENSE">com.example.denip.nasyiatulaisyiyahfinance.expensecategorynumber</string>
    <string name="CATEGORY_CURRENT_AMOUNT_EXPENSE">com.example.denip.nasyiatulaisyiyahfinance.expensecategorycurrentamount</string>
    <string name="CATEGORY_NAME_EXPENSE">com.example.denip.nasyiatulaisyiyahfinance.expensecategoryname</string>
    <string name="CATEGORY_FIRST_NUMBER_EXPENSE">com.example.denip.nasyiatulaisyiyahfinance.expensefirstnumber</string>
    <string name="CATEGORY_SECOND_NUMBER_EXPENSE">com.example.denip.nasyiatulaisyiyahfinance.expensesecondnumber</string>
    <string name="CATEGORY_THIRD_NUMBER_EXPENSE">com.example.denip.nasyiatulaisyiyahfinance.expensethirdnumber</string>
    <string name="CATEGORY_ID_INCOME">com.example.denip.nasyiatulaisyiyahfinance.incomecategoryid</string>
    <string name="CATEGORY_NUMBER_INCOME">com.example.denip.nasyiatulaisyiyahfinance.incomecategorynumber</string>
    <string name="CATEGORY_CURRENT_AMOUNT_INCOME">com.example.denip.nasyiatulaisyiyahfinance.incomecategorycurrentamount</string>
    <string name="CATEGORY_NAME_INCOME">com.example.denip.nasyiatulaisyiyahfinance.incomecategoryname</string>
    <string name="CATEGORY_FIRST_NUMBER_INCOME">com.example.denip.nasyiatulaisyiyahfinance.incomefirstnumber</string>
    <string name="CATEGORY_SECOND_NUMBER_INCOME">com.example.denip.nasyiatulaisyiyahfinance.incomesecondnumber</string>
    <string name="CATEGORY_THIRD_NUMBER_INCOME">com.example.denip.nasyiatulaisyiyahfinance.incomethirdnumber</string>
    <string name="expense_detail_title">Expense Detail</string>
    <string name="income_detail_title">Income Detail</string>
    <string name="category_detail">Category Detail</string>
    <string name="delete_expense_message">Are you sure want to delete this expense?</string>
    <string name="delete_income_message">Are you sure want to delete this income?</string>
    <string name="delete_category_message">Are your sure want to delete this category?</string>
    <string name="expense_deleted">Expense successfully deleted</string>
    <string name="expense_updated">Expense successfully updated</string>
    <string name="expense_added">Expense successfully added</string>
    <string name="income_added">Income successfully added</string>
    <string name="income_updated">Incomes successfully updated</string>
    <string name="income_deleted">Income successfully deleted</string>
    <string name="export_title">Export to CSV</string>
    <string name="description">Description</string>
    <string name="about_description">Nasyiatul Aisyiyah Finance or abbreviated as NA Finance is an
        android-based app that is exclusively developed for the organization Nasyiatul Aisyiyah.
        This application was developed with the aim of facilitating the Treasurer in recording
        transactions, both expenses or income. In addition, the Treasurer can also export transactions
        into files formatted .csv.</string>
    <string name="detail">Detail</string>
    <string name="detail_firebase_realtime">Firebase Realtime Database</string>
    <string name="detail_firebase_realtime_description">
        The Firebase Realtime Database is a cloud-hosted database. Data is stored as JSON and
        synchronized in realtime to every connected client. When you build cross-platform apps
        with our iOS, Android, and JavaScript SDKs, all of your clients share one Realtime Database
        instance and automatically receive updates with the newest data.
    </string>
    <string name="detail_super_csv">Super CSV 2.4.0</string>
    <string name="detail_super_csv_description">Motivation : The main motivation for Super CSV is to be
        the foremost, fastest, and most programmer-friendly, free CSV package for Java.
        \n\nFeatures :
        \n\nPOJO Support : Read or write using any old Javabean. Perform deep mapping and
        index-based mapping using the new Dozer extension! For the old-fashioned, you can read or
        write with Lists and Maps as well.
        \n\nAutomatic CSV Encoding : Forget about handling special
        characters such as commas and double-quotes - Super CSV will take care of that for you!
        All content is properly escaped/un-escaped according to the CSV specification.
        \n\nHighly configurable : Choose your own delimiter, quote character and line separator -
        or just use one of the predefined configurations. Comma-separated, tab-separated,
        semicolon-separated (Germany/Denmark) - it\'s all possible.
        \n\nData conversion : Powerful cell processors make it simple to parse input (to Booleans,
        Integers, Dates, etc), transform values (trimming Strings, doing regular expression
        replacement, etc) and format output like Dates and Numbers.
        \n\nConstraint validation : Verify that your data conforms to one or more constraints,
        such as number ranges, string lengths or uniqueness.
        \n\nStream-based I/O : Operates on streams rather than filenames, and gives you the control
        to flush or close the streams when you want. Write to a file, over the network, to a zip
        file, whatever!.</string>
</resources>