<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.denip.nasyiatulaisyiyahfinance.main.MainActivity">

    <item
        android:id="@+id/setting_profile"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/profile_title"
        android:titleCondensed="Areas"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/setting_category"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/category_title"
        android:titleCondensed="Areas"
        android:visible="true"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/setting_category_expense"
                android:title="@string/expense" />
            <item
                android:id="@+id/setting_category_income"
                android:title="@string/income" />
        </menu>
    </item>

    <item
        android:id="@+id/setting_export"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/export_title"
        android:titleCondensed="Areas"
        android:visible="true"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/setting_export_expense"
                android:title="@string/expense" />
            <item
                android:id="@+id/setting_export_income"
                android:title="@string/income" />
        </menu>
    </item>

    <item
        android:id="@+id/setting_change_password"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/change_password"
        android:titleCondensed="Areas"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/setting_sign_out"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/action_sign_out"
        android:titleCondensed="Areas"
        android:visible="true"
        app:showAsAction="never" />
</menu>
