<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_marginBottom="8dp"
    android:background="@color/bpWhite"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="vertical">


    <TextView
        android:id="@+id/initial_field"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:background="@drawable/background_initials"
        android:gravity="center"
        android:hint="DP"
        android:textColor="@color/bpblack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/expense_list_row_view_category_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/expense_list_row_view_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="6"
        android:text="@string/amount"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/expense_list_row_view_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:ellipsize="marquee"
        android:enabled="false"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLength="100"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:text="@string/note"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/bpblack"
        app:layout_constraintBottom_toBottomOf="@+id/initial_field"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/initial_field"
        app:layout_constraintRight_toLeftOf="@+id/expense_list_row_view_amount"
        app:layout_constraintTop_toTopOf="@+id/initial_field" />

    <TextView
        android:id="@+id/expense_list_row_view_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/calendar_date_picker_result_values"
        android:textColor="@color/bpblack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_list_row_view_category" />

    <TextView
        android:id="@+id/expense_list_row_view_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/category_title"
        android:textColor="@color/bpblack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initial_field" />

    <TextView
        android:id="@+id/expense_list_row_view_added_by"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/expense_added"
        android:textAlignment="textEnd"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintLeft_toRightOf="@+id/expense_list_row_view_date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expense_list_row_view_category" />

</android.support.constraint.ConstraintLayout>